# Prompt-injection-challenge

./: Dockerfile  LICENSE  README.md  build_script.sh  challenge_instructions.py  main.py  pyproject.toml  requirements.txt  sys_prompt.py
