[project]
name = "prompt-injection-challenge"
version = "0.1.0"
description = "A Gradio-based AI security challenge where users attempt to extract a hidden flag from a chatbot using prompt injection and social engineering techniques."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.6.0",
    "huggingface-hub>=1.4.1",
    "llama-cpp-python>=0.3.16",
    "openai>=2.23.0",
]
